--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     id="animated-asset"
                     src="assets/asset.gltf"
                 ></a-asset-item>
+                 <a-asset-item id="cake-mtl" src="assets/cake.mtl"></a-asset-item>
                 <a-asset-item id="brush" src="assets/brush.json"></a-asset-item>
             </a-assets>
 
